plugins {
//    id 'java'
    id 'idea'
    id 'nu.studer.jooq' version '5.2.1'
    id "org.flywaydb.flyway" version "7.8.2"
//    id 'jacoco' // HERE!
    id "com.diffplug.spotless" version "5.12.5"
}


group 'com.marketplace'
version '1.0.0-SNAPSHOT'

repositories {
    mavenLocal()
    mavenCentral()
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'idea'

    java {
        sourceCompatibility = JavaVersion.VERSION_16
        targetCompatibility = JavaVersion.VERSION_16
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
        intTestImplementation {
            extendsFrom testImplementation
        }
        intTestRuntime {
            extendsFrom testRuntimeClasspath
        }

        flywayMigration
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs += "--enable-preview"
    }
    tasks.withType(Test) {
        jvmArgs += "--enable-preview"
    }
    tasks.withType(JavaExec) {
        jvmArgs += "--enable-preview"
    }

    repositories {
        mavenLocal()
        mavenCentral()
    }
}

spotless {
    // optional: limit format enforcement to just the files changed by this feature branch
    ratchetFrom 'origin/main'

    format 'misc', {
        // define the files to apply `misc` to
        target '*.gradle', '*.md', '.gitignore'

        // define the steps to apply to those files
        trimTrailingWhitespace()
//        indentWithTabs() // or spaces. Takes an integer argument if you don't like 4
        endWithNewline()
    }
    java {
        // don't need to set target, it is inferred from java

        // apply a specific flavor of google-java-format
        googleJavaFormat('1.10.0')
        // make sure every file has the following copyright header.
        // optionally, Spotless can set copyright years by digging
        // through git history (see "license" section below)
//        licenseHeader '/* (C)$YEAR */'
    }
}
